.htaccess now supports expires data, gzip compression output and many minor changes. Added a cache and minify options for css files

--- a/app/locale/ro_RO/cms.csv
+++ b/app/locale/ro_RO/cms.csv
@@ -2,3 +2,6 @@
 "Back to main page","Înapoi la pagina principală"
 "Blog posts","Postări blog"
 "Click this link:","Apasă acest link:"
+"Ajax call test","Testare apel Ajax"
+"run first Ajax call","rulează primul apel Ajax"
+"run second Ajax call","rulează al doilea apel Ajax"
