--- a/app/locale/ro_RO/global.csv
+++ b/app/locale/ro_RO/global.csv
@@ -1,2 +1,4 @@
 "from","to"
 "ZeroG version","ZeroG versiunea 1.0"
+"Locale sample. Current locale:", "Exemplu localizare. Setare curentă: "
+"Currency format:", "Format monede:"
