Enhanced admin support

--- a/app/locale/ro_RO/Pixelplant_Blog.csv
+++ b/app/locale/ro_RO/Pixelplant_Blog.csv
@@ -6,3 +6,6 @@
 "First option","Prima opțiune"
 "Published","Publicat"
 "Site view","Vedere site"
+"Total %d records found","%d elemente găsite"
+"New blog post","Adaugă postare nouă"
+"Blog posts","Listă postări blog"
