Added AJAX and non AJAX support for grids

--- a/app/locale/ro_RO/Pixelplant_Blog.csv
+++ b/app/locale/ro_RO/Pixelplant_Blog.csv
@@ -39,3 +39,4 @@
 "Metadata","Metainformații"
 "Meta keywords","Cuvinte cheie meta"
 "Meta description","Meta descriere"
+"Edit blog category","Editare categorie blog"
