--- a/app/locale/ro_RO/ZeroG_Admin.csv
+++ b/app/locale/ro_RO/ZeroG_Admin.csv
@@ -6,6 +6,9 @@
 "No","Nu"
 "Any","Toate"
 "Page","Pagina"
+"Back","Înapoi"
+"Save","Salvează"
+"Delete","Șterge"
 "Previous page","Pagina precedentă"
 "Go to previous page","Mergi la pagina precedentă"
 "View","Afișează"
